--- a/test/events/index.html
+++ b/test/events/index.html
@@ -1,8 +1,12 @@
-<html>
-	<head>
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-	</head>
-	<body>
-		<script src="events.js" type="text/javascript"></script>
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Example</title>
+</head>
+<body style="margin: 0; padding: 0;">
+	<canvas id="glfw"></canvas>
+	<script src="events.js" type="text/javascript"></script>
+</body>
 </html>
