--- a/test/wasm/index.html
+++ b/test/wasm/index.html
@@ -7,6 +7,7 @@
 </head>
 <body style="margin: 0; padding: 0;">
 	<canvas id="glfw"></canvas>
-	<script src="events.js" type="text/javascript"></script>
+	<script src="init.js" type="text/javascript"></script>
+	<script src="wasm.js" type="text/javascript"></script>
 </body>
 </html>
